--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,60 @@ body{
     min-height: 100vh;
     background-size: cover;
     background-position: center;
+    background: linear-gradient(to right);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
 }
+
+/*SLIDER*/
+.slider{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    transform-style: preserve-3d;
+    animation: rotate 30s, linear infinite;
+}
+
+@keyframes rotate{
+    0%{
+        transform: perspective(1000px) rotateY(0deg);
+    }
+
+    100%{
+        transform: perspective(1000px) rotateY(360deg);
+    }
+}
+
+.sliderr span{
+    position: absolute;
+    top: 0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    transform-origin: center;
+    transform-style: preserve-3d;
+    transform: rotateY(calc(var(--i)*45deg)) translateZ(350px); 
+}
+
+.slider span img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 100px;
+    object-fit: cover;
+    transition: 2s;
+}
+
+.slider span:hover{
+    transform: translateY(-50px) scale(1.2);
+}
+/*SLIDER END*/
+
+
 
 .header{
     position: fixed;
@@ -54,10 +107,4 @@ body{
 
 .navbar a:hover::before{
     width: 100%;
-}
-
-/*MEDIA QUERIES*/
-
-@media  {
-    
 }
