--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body{
     width: 200px;
     height: 200px;
     transform-style: preserve-3d;
-    animation: rotate 30s, linear infinite;
+    animation: rotate 30s linear infinite;
 }
 
 @keyframes rotate{
@@ -35,15 +35,15 @@ body{
     }
 }
 
-.sliderr span{
+.slider span{
     position: absolute;
     top: 0;
-    left:0;
+    left: 0;
     width: 100%;
     height: 100%;
     transform-origin: center;
     transform-style: preserve-3d;
-    transform: rotateY(calc(var(--i)*45deg)) translateZ(350px); 
+    transform: rotateY(calc(var(--i)*45deg)) translateZ(350px);
 }
 
 .slider span img{
@@ -52,18 +52,18 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    border-radius: 100px;
+    border-radius: 40px;
     object-fit: cover;
-    transition: 2s;
+    transition: 1.1s;
 }
 
-.slider span:hover{
+.slider span:hover img{
     transform: translateY(-50px) scale(1.2);
 }
 /*SLIDER END*/
 
 
-
+/*NAV-BAR*/
 .header{
     position: fixed;
     top: 0;
@@ -108,3 +108,4 @@ body{
 .navbar a:hover::before{
     width: 100%;
 }
+/*NAV-BAR-END*/
